# pharos-rwa-risk-diligence-skill

./: README.md  SKILL.md  pyproject.toml
docs/: engine-spec.md  test-checklist.md
examples/: agent_demo.py  demo_asset.json
src/rwa_risk_diligence/: __init__.py  cli.py  engine.py  provider.py  red_flags.py  scoring.py  types.py
tests/: test_risk_diligence.py
