[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pharos-rwa-risk-diligence-skill"
version = "0.1.0"
description = "RWA and contract risk diligence skill for Pharos."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
rwa-risk-diligence = "rwa_risk_diligence.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
